062520250201-added the security to the dashboard, still need to fully implement it and also the db gui needs to be a realtime reflection of the chain not an independent part of it

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -782,6 +782,7 @@ footer {
                 {% endif %}
                 <li><a href="{{ url_for('blockchain_dashboard') }}" class="nav-link">🔗 <span class="hidden-mobile">Blockchain</span></a></li>
                 <li><a href="#" onclick="showHelp()" class="nav-link">❓ <span class="hidden-mobile">Help</span></a></li>
+                <li><a href="{{ url_for('security_dashboard') }}" class="nav-link">🛡️ <span class="hidden-mobile">Security</span></a></li>
             {% endif %}
         </ul>
 
